<resources>
    <string name="app_name">Follow My Lyon</string>
    <string name="title_activity_maps">Map</string>
    <string name="network_error">Network error.</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_pointdinteret_list">Points d\'interets</string>
    <string name="title_pointdinteret_detail">Plus d\'informations</string>
    <string name="date_arrivee">Ma date d\'arrivée</string>
    <string name="date_depart">Ma date de départ</string>
    <string name="arrivee">Arrivée le</string>
    <string name="depart">Départ le</string>
    <string name="valider">Valider</string>
    <string name="complete">Complete</string>
    <string name="error">Erreur</string>
    <string name="lorem"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vitae libero turpis. Etiam id porttitor diam. Mauris diam mauris, feugiat sed elit non, lacinia lobortis urna. In at interdum justo, ut posuere metus. Proin sit amet imperdiet augue, in placerat ligula. Aliquam erat volutpat. Sed suscipit mi ligula, vel consectetur eros lobortis faucibus. Mauris pellentesque lacinia diam, nec mollis massa sollicitudin vel.</string>
    <string name="votre_sejour">Votre Sejour</string>
    <string name="vos_preferences">Vos préférences</string>
    <string name="annuler">Annuler</string>
    <string name="bouton_preference">Mes préférences</string>
    <string name="adresse">Adresse</string>
    <string name="numero_telephone">06 43 44 12 64</string>
    <string name="du">Du</string>
    <string name="au">Au</string>
    <string name="debut_sejour">debut</string>
    <string name="fin_sejour">fin</string>
    <string name="pas_de_description">Pas de description disponible pour ce point d\'intérêt.</string>
</resources>
