<com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pointdinteret_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitybackground"
    android:textIsSelectable="true"
    app:parallax_factor="1.9"
    tools:context="fr.vcaen.lyontour.fragments.PointdinteretDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/attraction_detail_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="#ACACAC"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/gradient">

                <TextView
                    android:id="@+id/attraction_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:text="Here is your text"

                    android:textColor="#ffd8d8d8"
                    android:textSize="30sp" />
            </RelativeLayout>
        </RelativeLayout>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            card_view:cardBackgroundColor="@color/carddarkforground"
            card_view:cardElevation="20dp">


            <TextView
                android:id="@+id/attraction_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/lorem"
                android:textColor="@color/card_text_color" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            card_view:cardBackgroundColor="@color/carddarkforground"
            card_view:cardElevation="20dp">


            <RelativeLayout
                android:id="@+id/coordonees"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/adresseMarker"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/home149" />

                <TextView
                    android:id="@+id/adresseTexte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/adresseMarker"
                    android:layout_toRightOf="@id/adresseMarker"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/adresse"
                    android:textColor="@color/gris"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/phoneIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/adresseMarker"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/phone370" />

                <TextView
                    android:id="@+id/phoneTexte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/phoneIcon"
                    android:layout_below="@id/adresseTexte"
                    android:layout_toRightOf="@id/phoneIcon"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/numero_telephone"
                    android:textColor="@color/gris"
                    android:textSize="20sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            card_view:cardBackgroundColor="@color/carddarkforground"
            card_view:cardElevation="20dp">

            <com.mapbox.mapboxsdk.views.MapView
                android:id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="0.81" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</com.nirhart.parallaxscroll.views.ParallaxScrollView>